--- a/sudoku.html
+++ b/sudoku.html
@@ -10,11 +10,11 @@
 		<link rel="stylesheet" type = "text/css" href = "sudoku.css" media = "all" >
 	</head>
 	<body>
-		<div class="table-bordered">
+	<div class="table-responsive container">
 		<table class="table " id=to>
 			<tr id=tro1>
 				<td>
-					<table class="table ti" border=1 id=ti1>
+					<table class="table-responsive ti" border=1 id=ti1>
 						<tr class=tr1>
 
 						<td id=0 class="tdi t0 r0 c0" >  </td>
@@ -34,7 +34,7 @@
 					</table>
 				</td>
 				<td>
-				<table class="table ti" border=1 id=ti2>
+				<table class="table-responsive ti" border=1 id=ti2>
 					<tr class=tr1>
 
 					<td id=9 class="tdi t1 r0 c3"></td>
@@ -54,7 +54,7 @@
 				</table>
 				</td>
 				<td>
-				<table class="table ti" border=1 id=ti3>
+				<table class="table-responsive ti" border=1 id=ti3>
 					<tr class=tr1>
 
 					<td id=18 class="tdi t2 r0 c6"></td>
@@ -76,7 +76,7 @@
 			</tr>
 			<tr id=tro2>
 				<td>
-					<table class="table ti" border=1 id=ti4>
+					<table class="table-responsive ti" border=1 id=ti4>
 						<tr class=tr1>
 
 						<td id=27 class="tdi t3 r3 c0"></td>
@@ -96,7 +96,7 @@
 					</table>
 				</td>
 				<td>
-				<table class="table ti" border=1 id=ti5>
+				<table class="table-responsive ti" border=1 id=ti5>
 					<tr class=tr1>
 
 					<td id=36 class="tdi t4 r3 c3"></td>
@@ -116,7 +116,7 @@
 				</table>
 				</td>
 				<td>
-					<table class="table ti" border=1 id=ti6>
+					<table class="table-responsive ti" border=1 id=ti6>
 					<tr class=tr1>
 
 					<td id=45 class="tdi t5 r3 c6"></td>
@@ -138,7 +138,7 @@
 			</tr>
 			<tr id=tro3>
 				<td>
-					<table class="table ti" border=1 id=ti7>
+					<table class="table-responsive ti" border=1 id=ti7>
 						<tr class=tr1>
 
 						<td id=54 class="tdi t6 r6 c0"></td>
@@ -158,7 +158,7 @@
 						</table>
 				</td>
 				<td>
-				<table class="table ti" border=1 id=ti8>
+				<table class="table-responsive ti" border=1 id=ti8>
 					<tr class=tr1>
 
 					<td id=63  class="tdi t7 r6 c3"></td>
@@ -177,7 +177,7 @@
 					</tr>
 				</table>
 				</td>
-				<td><table class="table ti" border=1 id=ti9>
+				<td><table class="table-responsive ti" border=1 id=ti9>
 
 					<tr class=tr1>
 					<td id=72 class="tdi t8 r6 c6"></td>
@@ -199,18 +199,15 @@
 			  </td>	
 			 </tr>
 		</table>
-
-	</div>
-	<div id=div2>
-	<button type="button" class=" b" id="b1" value=1>1</button>
-	<button type="button" class=" b" id="b2" value=2 >2</button>
-	<button type="button" class=" b" id="b3" value=3>3</button>
-	<button type="button" class=" b" id="b4" value=4>4</button>
-	<button type="button" class=" b" id="b5" value=5>5</button>
-	<button type="button" class="b" id="b6" value="6">6</button>
-	<button type="button" class=" b" id="b7" value=7>7</button>
-	<button type="button" class=" b" id="b8" value=8>8</button>
-	<button type="button" class=" b" id="b9" value=9>9</button>
+		<button type="button" class=" btn" id="b1" value=1>1</button>
+		<button type="button" class=" btn" id="b2" value=2>2</button>
+		<button type="button" class=" btn" id="b3" value=3>3</button>
+		<button type="button" class=" btn" id="b4" value=4>4</button>
+		<button type="button" class=" btn" id="b5" value=5>5</button>
+		<button type="button" class=" btn" id="b6" value=6>6</button>
+		<button type="button" class=" btn" id="b7" value=7>7</button>
+		<button type="button" class=" btn" id="b8" value=8>8</button>
+		<button type="button" class=" btn" id="b9" value=9>9</button>	
 		</div>
 	</body>
 </html>
